manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress 
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: external-nginx-service
            port:
              number: 80
